force-app/main/default/objects/Medical_Representative__c/Medical_Representative__c.object-meta.xml
<CustomObject>
    <label>Medical Representative</label>
    <nameField>
        <label>Rep Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medical Representatives</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>