force-app/main/default/objects/Medical_Representative__c/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Manager</label>
    <referenceTo>Medical_Representative__c</referenceTo>
    <relationshipLabel>Medical Representatives</relationshipLabel>
    <relationshipName>Medical_Representatives</relationshipName>
    <type>Lookup</type>
</CustomField>