force-app/main/default/objects/Medical_Representative__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Salesforce User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Medical Representative</relationshipLabel>
    <relationshipName>Medical_Representatives</relationshipName>
    <type>Lookup</type>
</CustomField>